--- a/Assignment_2/django/Dockerfile
+++ b/Assignment_2/django/Dockerfile
@@ -1,7 +1,12 @@
-FROM python:alpine3.20
-    
+FROM python:3.11
+
+RUN apt-get update \
+	&& apt-get install -y --no-install-recommends \
+		postgresql-client \
+	&& rm -rf /var/lib/apt/lists/*
 WORKDIR /usr/src/app
 COPY requirements.txt ./
+
 RUN pip install -r requirements.txt
 COPY . .
 
