--- a/Midterm/docker-compose.yml
+++ b/Midterm/docker-compose.yml
@@ -22,7 +22,7 @@ services:
     env_file: 
       - ./postgres.env
     healthcheck:
-      test: ["CMD-SHELL", "pg_isready -U bauyrzhan -d midterm"]
+      test: ["CMD-SHELL", "pg_isready -U ${POSTGRES_USER} -d ${POSTGRES_DB}"]
       interval: 10s
       retries: 3
       start_period: 30s
